[#14716] Increase coverage of org.infinispan.commons.util